# dnspp

./: CMakeLists.txt  bsearch.html  bsearch.html.save  client.html  client.sh  dnspp.cpp  dnspp.hpp  poll-safe.sh  poll.sh  read.bat  send.bat  srv.cpp
